libs/db | updated db

--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
     "lerna": "^8.1.2"
   },
   "scripts": {
-    "dev": "lerna run dev --stream",
+    "dev": "lerna run dev",
+    "dev:db": "lerna run dev --scope=db",
     "dev:web": "lerna run dev --scope=web",
-    "dev:dashboard": "lerna run dev --scope=dashboard",
+    "dev:react-web": "lerna run dev --scope=react-web",
     "dev:shared-ui": "lerna run dev --scope=@yuddy/shared-ui",
 
     "build": "lerna run build --stream",
     "build:web": "lerna run build --scope=web",
-    "build:dashboard": "lerna run build --scope=dashboard",
+    "build:react-web": "lerna run build --scope=react-web",
     "build:shared-ui": "lerna run build --scope=@yuddy/shared-ui",
     
     "start": "lerna run start --stream",
+    "start:db": "lerna run dev --scope=db",
     "start:web": "lerna run start --scope=web",
-    "start:dashboard": "lerna run start --scope=dashboard",
+    "start:react-web": "lerna run start --scope=react-web",
     "start:shared-ui": "lerna run start --scope=@yuddy/shared-ui"
   }
 }
