--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@yuddy/shared-ui": "^1.0.0",
+    "lottie-react": "^2.4.0",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
